--- a/index.html
+++ b/index.html
@@ -1,11 +1,98 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Bee of All Trades</title>
+<head>
+    <title>Tic Tac Toe with Phaser</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js"></script>
-    <!-- <script src="tag.js"></script> -->
-    <script src="script.js"></script>
-  </head>
-  <body>
-  </body>
+    <script src="style.css"></script>
+    <script>
+        const config = {
+    type: Phaser.AUTO,
+    width: 400,
+    height: 300,
+    scene: {
+        preload: preload,
+        create: create
+    }
+};
+
+const game = new Phaser.Game(config);
+
+let board;
+let currentPlayer = '1';
+let gameBoard = ['', '', '', '', '', '', '', '', ''];
+let gameEnded = false;
+
+function preload() {
+    this.load.image('cell', 'cell.png');
+    this.load.image('1',  'bee.png');
+    this.load.image('2', 'pentagon.png');
+    this.load.image('background', 'background.png'); // preload background image
+}
+
+function create() {
+    this.add.image(400, 300, 'background').setScale(0.5); // add background image
+
+
+    board = this.add.group();
+
+    for (let i = 0; i < 3; i++) {
+      for (let j = 0; j < 3; j++) {
+            const cell = this.add.sprite(100 * i + 50, 100 * j + 50, 'cell').setInteractive();
+            cell.setOrigin(0.5);
+            cell.setData('index', i + j * 3);
+            cell.on('pointerdown', handleClick);
+            board.add(cell);
+        }
+    }
+}
+
+function checkWinner() {
+    const winPatterns = [
+        [0, 1, 2],
+        [3, 4, 5],
+        [6, 7, 8],
+        [0, 3, 6],
+        [1, 4, 7],
+        [2, 5, 8],
+        [0, 4, 8],
+        [2, 4, 6]
+    ];
+
+    for (const pattern of winPatterns) {
+        const [a, b, c] = pattern;
+        if (gameBoard[a] && gameBoard[a] === gameBoard[b] && gameBoard[a] === gameBoard[c]) {
+            return gameBoard[a];
+        }
+    }
+
+    if (gameBoard.every(cell => cell !== '')) {
+        return 'tie';
+    }
+
+    return null;
+}
+
+function handleClick() {
+    if (!gameEnded) {
+        const cellIndex = this.getData('index');
+        if (!gameBoard[cellIndex]) {
+            gameBoard[cellIndex] = currentPlayer;
+            this.setTexture(currentPlayer.toLowerCase());
+            const winner = checkWinner();
+            if (winner) {
+                if (winner === 'tie') {
+                    alert('It\'s a tie!');
+                } else {
+                    alert(`Player ${winner} wins!`);
+                }
+                gameEnded = true;
+            } else {
+                currentPlayer = currentPlayer === '1' ? '2' : '1';
+            }
+        }
+    }
+}
+
+    </script>
+</head>
 </html>
