--- a/index copy.html
+++ b/index copy.html
@@ -4,6 +4,9 @@
     <title>Bee of All Trades</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js"></script>
     <script src="tag.js"></script>
+    <script>
+      // LaunchTagGame();
+    </script>
     <!-- random comment -->
   </head>
   <body>
