--- a/pg/ttt.html
+++ b/pg/ttt.html
@@ -4,5 +4,6 @@
     <title>Tic Tac Toe with Phaser</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js"></script>
      <script src="ttt.js"></script>
+     <script>LaunchTicTacToe()</script>
 </head>
-</html>
+</html> 
