--- a/runner.html
+++ b/runner.html
@@ -5,6 +5,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js"></script>
     <script src="runner.js"></script>
     <!-- random comment -->
+    <script>
+      launchRunnerGame();
+    </script>
   </head>
   <body>
   </body>
