--- a/main.html
+++ b/main.html
@@ -24,7 +24,43 @@
 
         <div id="gameContainer"></div>
 
-
+        <style>
+          body {
+              font-family: 'Arial', sans-serif;
+              background-color: #ffe473;
+              color: #000000;
+              
+              margin: 20px;
+          }
+  
+          h1 {
+              font-family: 'Helvetica', sans-serif;
+              font-weight: bold;
+              color: #000000;
+              margin-bottom: 20px;
+          }
+  
+          button {
+              font-family: 'Arial', sans-serif;
+              font-size: 18px;
+              font-weight: bold;
+              color: #ffffff;
+              background-color: #fdcb00;
+              border: none;
+              border-radius: 10px;
+              padding: 10px 20px;
+              margin: 5px;
+              cursor: pointer;
+          }
+  
+          button:hover {
+              background-color: #ffd93e;
+          }
+  
+          #gameContainer {
+              display: inline-block;
+          }
+      </style>
         <script>
 window.attachEvent && window.attachEvent( "load", DestroyGame());
     
@@ -36,7 +72,7 @@ document.addEventListener('DOMContentLoaded', function() {
     }
 }, false);
 
-function tagGame() {
+  function tagGame() {
   const iframe = document.createElement("iframe");
   iframe.src = "http://127.0.0.1:8080/tag.html";
   iframe.style.border = "0px #ffffff none";
@@ -57,6 +93,8 @@ function tagGame() {
     document.body.appendChild(iframe);
   }
 }
+
+
 
 
 function responseGame() {
