--- a/tag.html
+++ b/tag.html
@@ -5,7 +5,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js"></script>
     <script src="tag.js"></script>
     <script>
-      LaunchTagGame();
+      // LaunchTagGame();
     </script>
     <!-- random comment -->
   </head>
