--- a/pg/memory.html
+++ b/pg/memory.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Tic Tac Toe with Phaser</title>
+    <title>Memory</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js"></script>
      <script src="ttt.js"></script>
 </head>
