--- a/pg/memory.html
+++ b/pg/memory.html
@@ -3,6 +3,9 @@
 <head>
     <title>Memory</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js"></script>
-     <script src="ttt.js"></script>
+     <script>
+
+         LaunchMemory();
+     </script>
 </head>
 </html>
