--- a/match.html
+++ b/match.html
@@ -3,6 +3,6 @@
   <head>
     <title>Matching Game</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js"></script>
-    <script src="mg.js"></script>
+    <script src="match.js"></script>
   </head>
 </html>
