--- a/main.html
+++ b/main.html
@@ -48,7 +48,7 @@
           }
   
           button {
-            font-family: "Comic Sans MS", "Comic Sans", cursive;
+              font-family: "Comic Sans MS"; 
               font-size: 18px;
               font-weight: bold;
               color: #ffffff;
