--- a/tag.html
+++ b/tag.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bee of All Trades</title>
+    <title>Bee of Tag</title>
+    <style>
+      #timer {
+        font-size: 30px;
+        color:green;
+        font-weight: bold;
+      }
+    </style>
+  </head>
+  <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js"></script>
     <script src="tag.js"></script>
     <script>
-      LaunchTagGame();
+      // LaunchTagGame();
     </script>
-    <!-- random comment -->
-  </head>
-  <body>
+    <div id = "timer">Info</div>
   </body>
 </html>
