--- a/main.html
+++ b/main.html
@@ -21,6 +21,7 @@
         <button onclick="eightyZoom(); DestroyGame(); tagGame()">Bee Tag</button>
         <button onclick="fullZoom(); DestroyGame(); LaunchMemoryGame()">Memory Bee</button>
         <button onclick="fullZoom(); DestroyGame(); LaunchTriviaGame()">Bee Trivia</button>
+        <button onclick="fullZoom(); DestroyGame(); LaunchResponseGame()">Speedy Bee</button>
         <button onclick="eightyZoom(); DestroyGame(); platformerGame()">Bee Platformer</button>
         
         <br>
