--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
   function tagGame() {
   const iframe = document.createElement("iframe");
-  iframe.src = "http://127.0.0.1:8080/tag.html";
+  iframe.src = "tag.html";
   iframe.style.border = "0px #ffffff none";
   iframe.name = "myiFrame";
   iframe.scrolling = "no";
@@ -106,7 +106,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 function responseGame() {
   const iframe = document.createElement("iframe");
-  iframe.src = "http://127.0.0.1:8080/responsetimegame.html";
+  iframe.src = "responsetimegame.html";
   iframe.style.border = "0px #ffffff none";
   iframe.name = "myiFrame";
   iframe.scrolling = "no";
@@ -136,7 +136,7 @@ function fullZoom()
 function runnerGame() {
     
   const iframe = document.createElement("iframe");
-  iframe.src = "http://127.0.0.1:8080/runner.html";
+  iframe.src = "runner.html";
   iframe.style.border = "0px #ffffff none";
   iframe.name = "myiFrame";
   iframe.scrolling = "no";
@@ -161,7 +161,7 @@ function runnerGame() {
 
 function triviaGame() {
   const iframe = document.createElement("iframe");
-  iframe.src = "http://127.0.0.1:8080/triviagame.html";
+  iframe.src = "triviagame.html";
   iframe.style.border = "0px #ffffff none";
   iframe.name = "myiFrame";
   iframe.scrolling = "no";
@@ -184,7 +184,7 @@ function triviaGame() {
 
 function platformerGame() {
   const iframe = document.createElement("iframe");
-  iframe.src = "http://127.0.0.1:8080/platformer.html";
+  iframe.src = "platformer.html";
   iframe.style.border = "0px #ffffff none";
   iframe.name = "myiFrame";
   iframe.scrolling = "no";
