--- a/index.html
+++ b/index.html
@@ -207,6 +207,10 @@ function DestroyGame() {
 while (iframes.length > 0) {
     iframes[0].parentNode.removeChild(iframes[0]);
 }
+}
+function call(){
+  console.log("beans")
+}
 
         </script>
 
